@@ -1,4 +1,0 @@
-asn1
-client
-daemons
-install
