@@ -5,12 +5,8 @@
 
 DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 
-ONLY_CLIENT=0
 DESTDIR=$(CURDIR)/debian/tmp
 
-export SKIP_API_VERSION_CHECK="yes"
-export SUPPORTED_PLATFORM=debian
-PLATFORM="SUPPORTED_PLATFORM=debian"
 JAVA_STACK_SIZE ?= 8m
 export JAVA_STACK_SIZE
 
@@ -18,59 +14,25 @@ export JAVA_STACK_SIZE
 SOURCE = freeipa
 gentarball: UV=$(shell dpkg-parsechangelog|awk '/^Version:/ {print $$2}'|sed 's/-.*$$//')
 gentarball:
-	git archive --format=tar experimental --prefix=$(SOURCE)-$(UV)/ | xz --best > ../$(SOURCE)_$(UV).orig.tar.xz
-
-override_dh_auto_clean:
-	for i in asn1 daemons install ipalib ipapython; do \
-		(cd $$i && [ ! -f Makefile ] || $(MAKE) distclean); \
-		(cd $$i && rm -f COPYING INSTALL depcomp install-sh missing py-compile config.guess config.sub aclocal.m4 config.h.in version.m4); \
-	done
-	find . -name "*.pyo" -o -name "*.pyc" -type f -exec rm -f "{}" \;
-	find . -name "ltmain.sh" -exec rm -f "{}" \;
-	find . -name "configure" -exec rm -f "{}" \;
-	rm -rf daemons/ipa-version.h freeipa.spec freeipa.egg-info version.m4
-	rm -rf ipapython/build RELEASE build
-
-override_dh_autoreconf:
-	make IPA_VERSION_IS_GIT_SNAPSHOT=no version-update
-	dh_autoreconf; cd ..
+	git archive --format=tar experimental --prefix=$(SOURCE)-$(UV)/ | \
+		xz --best \
+		> ../$(SOURCE)_$(UV).orig.tar.xz
 
 override_dh_auto_configure:
-	dh_auto_configure -Dclient
-ifneq ($(ONLY_CLIENT), 1)
-	dh_auto_configure -Ddaemons -- \
-		--libexecdir=/usr/lib \
-		--with-openldap \
-		--with-systemdsystemunitdir=/lib/systemd/system
-
-	dh_auto_configure -Dinstall -- \
-		--libexecdir=/usr/lib
-endif
-
-override_dh_auto_build:
-ifneq ($(ONLY_CLIENT), 1)
-	make $(PLATFORM) IPA_VERSION_IS_GIT_SNAPSHOT=no all
-#	cd selinux ; make all
-else
-	make $(PLATFORM) IPA_VERSION_IS_GIT_SNAPSHOT=no client
-endif
+	dh_auto_configure -- \
+		--libexecdir=/usr/lib/ \
+		--with-ipaplatform=debian \
+		--with-sysconfenvdir=/etc/default \
+		--disable-pylint \
+		--without-jslint
 
 # tests would just fail, they need a proper environment with 389 running et al
 override_dh_auto_test:
 
 override_dh_auto_install:
-ifneq ($(ONLY_CLIENT), 1)
-	# Force re-generate of platform support
-	rm -f ipapython/services.py
-	make $(PLATFORM) IPA_VERSION_IS_GIT_SNAPSHOT=no install DESTDIR=$(DESTDIR)
-	cd ..
+	dh_auto_install --max-parallel=1
 
 	chmod 755 $(DESTDIR)/usr/lib/ipa/certmonger/*
-
-	mkdir -p $(DESTDIR)/usr/share/bash-completion/completions \
-		 $(DESTDIR)/etc/default \
-		 $(DESTDIR)/etc/ipa/kdcproxy \
-		 $(DESTDIR)/usr/share/ipa/html
 
 	touch $(DESTDIR)/usr/share/ipa/html/ca.crt
 	touch $(DESTDIR)/usr/share/ipa/html/kerberosauth.xpi
@@ -79,22 +41,10 @@ ifneq ($(ONLY_CLIENT), 1)
 	touch $(DESTDIR)/usr/share/ipa/html/krb5.ini
 	touch $(DESTDIR)/usr/share/ipa/html/krbrealm.con
 
-	install -m 0644 init/ipa-dnskeysyncd.conf $(DESTDIR)/etc/default/ipa-dnskeysyncd
-	install -m 0644 init/ipa-ods-exporter.conf $(DESTDIR)/etc/default/ipa-ods-exporter
-	install -m 0644 install/share/kdcproxy.conf $(DESTDIR)/etc/ipa/kdcproxy/kdcproxy.conf
-	install -m 0755 daemons/dnssec/ipa-dnskeysync-replica $(DESTDIR)/usr/lib/ipa/
-	install -m 0755 daemons/dnssec/ipa-dnskeysyncd $(DESTDIR)/usr/lib/ipa/
-	install -m 0644 daemons/dnssec/ipa-dnskeysyncd.service $(DESTDIR)/lib/systemd/system
-	install -m 0755 daemons/dnssec/ipa-ods-exporter $(DESTDIR)/usr/lib/ipa/
-	install -m 0644 daemons/dnssec/ipa-ods-exporter.service $(DESTDIR)/lib/systemd/system
-	install -m 0644 daemons/dnssec/ipa-ods-exporter.socket $(DESTDIR)/lib/systemd/system
-	install -m 0644 init/systemd/ipa.service $(DESTDIR)/lib/systemd/system
-	install -m 0644 init/systemd/ipa-custodia.service $(DESTDIR)/lib/systemd/system
-	install -m 0644 contrib/completion/ipa.bash_completion $(DESTDIR)/usr/share/bash-completion/completions/ipa
-
-else
-	make $(PLATFORM) IPA_VERSION_IS_GIT_SNAPSHOT=no client-install DESTDIR=$(DESTDIR)
-endif
+	mkdir -p $(DESTDIR)/usr/share/bash-completion/completions \
+	install -m 0644 contrib/completion/ipa.bash_completion \
+		$(DESTDIR)/usr/share/bash-completion/completions/ipa
+	rm -rf $(DESTDIR)/etc/bash_completion.d
 
 	# purge .la files
 	find $(CURDIR)/debian/tmp -name "*.la" -type f -exec rm -f "{}" \;
@@ -102,6 +52,8 @@ endif
 	find $(CURDIR)/debian/tmp -name '*.py[c,o]' -exec rm '{}' ';'
 	# fix permissions
 	find $(CURDIR)/debian/tmp -name "*.mo" -type f -exec chmod -x "{}" \;
+	# remove files which are useful only for make uninstall
+	find $(CURDIR)/debian/tmp -wholename '*/dist-packages/*/install_files.txt' -exec rm '{}' \;
 
 override_dh_install:
 	dh_install --fail-missing
@@ -122,4 +74,5 @@ override_dh_fixperms:
 	fi
 
 %:
-	dh $@ --with autoreconf,python2,systemd
+	dh $@ --with autoreconf,python2,systemd \
+		--builddirectory=build
